# StrideSearch

./: CMakeLists.txt  Doxyfile  LICENSE  PolarData.f90  PolarSearch.f90  PolarSearchDriver.f90  PolarStrideSearch.f90  README.md  ReadDataTest.f90  StormListNode.f90  StormListTester.f90  StormTracks.f90  StrideSearch.f90  StrideSearchConfig.h.in  StrideSearchData.f90  StrideSearchDriver.f90  TropicalSearchDriver.f90  TropicalStormListNode.f90  TropicalStrideSearch.f90  runTropicalSearch.sh  trackDriver.f90
cpp/: CMakeLists.txt  Readme.md  SSDataLatLonTests.cpp  SSDataLatLonUnitTest.cpp  SSDateTimeTests.cpp  SSEventTests.cpp  SSLLSectorListTests.cpp  SSMinMaxCriteriaUnitTest.cpp  SSSectorListUnitTest.cpp  SSSectorUnitTest.cpp  SSUtilitiesTests.cpp  SSWorkspaceDictUnitTest.cpp  SSWorkspaceTests.cpp  StrideSearchCollocationCriteria.h  StrideSearchConfig.h.in  StrideSearchDataBase.cpp  StrideSearchDataBase.h  StrideSearchDataLatLon.cpp  StrideSearchDataLatLon.h  StrideSearchData_Base.cpp  StrideSearchData_Base.h  StrideSearchData_LatLon.cpp  StrideSearchData_LatLon.h  StrideSearchDateTime.cpp  StrideSearchDateTime.h  StrideSearchEvent.cpp  StrideSearchEvent.h  StrideSearchEventList.cpp  StrideSearchEventList.h  StrideSearchIDCriteria_Base.cpp  StrideSearchIDCriteria_Base.h  StrideSearchIDCriterion_Base.cpp  StrideSearchMinMaxCriteria.cpp  StrideSearchMinMaxCriteria.h  StrideSearchSector.cpp  StrideSearchSector.h  StrideSearchSectorListBase.cpp  StrideSearchSectorListBase.h  StrideSearchSectorListLatLon.cpp  StrideSearchSectorListLatLon.h  (+13 more)
cpp/doc/: Doxyfile.in  README.md  StrideSearchBib.bib
cpp/examples/: CMakeLists.txt  MCSDriver.cpp  SSTropicalCyclone.cpp
cpp/src/: CMakeLists.txt  SSConsts.hpp  SSData.hpp  SSDateTime.cpp  SSDateTime.hpp  SSDefs.hpp  SSKdTree.hpp  SSNCReader.cpp  SSSearch.hpp  SSUtilities.cpp  SSUtilities.hpp  StrideSearchCollocationCriteria.cpp  StrideSearchDataBase.cpp  StrideSearchDataBase.h  StrideSearchDataLatLon.h  StrideSearchDateTime.cpp  StrideSearchDateTime.h  StrideSearchEvent.cpp  StrideSearchEvent.h  StrideSearchEventList.cpp  StrideSearchEventList.h  StrideSearchHeaderTemplate.h  StrideSearchIDCriterionBase.cpp  StrideSearchIDCriterionBase.h  StrideSearchMinMaxCriteria.cpp  StrideSearchMinMaxCriteria.h  StrideSearchNanoflannAdaptor.h  StrideSearchNanoflannTree.cpp  StrideSearchNanoflannTree.h  StrideSearchSector.cpp  StrideSearchSector.h  StrideSearchSectorListBase.cpp  StrideSearchSectorListBase.h  StrideSearchTimer.cpp  StrideSearchTimer.h  StrideSearchTrack.cpp  StrideSearchTrack.h  StrideSearchTypeDefs.h  StrideSearchUtilities.cpp  StrideSearchUtilities.h  (+2 more)
cpp/tests/: CMakeLists.txt  SSDataLatLonUnitTest.cpp  SSDataUnitTest.cpp  SSDateTimeTests.cpp  SSEventTests.cpp  SSGridTests.cpp  SSLLSectorListTests.cpp  SSMinMaxCriteriaUnitTest.cpp  SSNanoTest.cpp  SSNanoflannUnitTests.cpp  SSSectorListUnitTest.cpp  SSSectorUnitTest.cpp  SSTestTemplate.cpp  SSTimerUnitTests.cpp  SSUtilitiesTests.cpp  SSWorkspaceDictUnitTest.cpp
doc/: Doxyfile.in  README.md
doc/html/: _polar_data_8f90.html  _polar_data_8f90_source.html  _polar_low_list_node_8f90.html  _polar_low_list_node_8f90_source.html  _polar_search_8f90_aa085676eaa94ce60438fd45f8ffe6ccc_cgraph.map  _polar_search_8f90_aa085676eaa94ce60438fd45f8ffe6ccc_cgraph.md5  _polar_search_8f90_source.html  _polar_search_driver_8f90_aa085676eaa94ce60438fd45f8ffe6ccc_cgraph.md5  _polar_search_driver_8f90_source.html  _polar_stride_search_8f90.html  _polar_stride_search_8f90_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _read_data_test_8f90.html  _read_data_test_8f90_a8dcdb26802109a738608f1bb5737e6c8_cgraph.map  _read_data_test_8f90_source.html  _storm_list_node_8f90.html  _storm_list_node_8f90_source.html  _storm_list_tester_8f90.html  _storm_list_tester_8f90_a34a5c830638c6b93fa598c69f6060c8e_cgraph.map  _storm_list_tester_8f90_source.html  _storm_track_data_8f90.html  (+345 more)
examples/: CMakeLists.txt  SSSouthernExtraTrop.cpp  SSTropicalCyclone.cpp  tc_datafiles.txt
fortran/: Doxyfile  PolarLowListNode.f90  PolarSearchDriver.f90  README.md  StormTrackData.f90  StrideSearchData.f90  TrackDataTest.f90  TropicalData.f90  TropicalStrideSearch.f90  runTropicalSearch.sh  trackDriver.f90
gfdlUtilities/: CMakeLists.txt  get_date.f90  netcdfUtilities.f90
include/: nanoflann.hpp
python/: Data.py  Driver.py  Event.py  IdentCriteria.py  Sector.py  SectorList.py  StrideSearch.py  StrideSearchUtilities.cpp  StrideSearchUtilities.h  Track.py  TropicalDriver.py  __init__.py  bestTracks.py  guiExample.py  plotTropical.py  setup.py
scripts/: runTimingExp.sh  runTropicalSearch-ne240.sh
src/: CMakeLists.txt  SSCollocCriteria.hpp  SSConsts.hpp  SSData.cpp  SSData.hpp  SSDataLayoutTraits.hpp  SSDateTime.cpp  SSDateTime.hpp  SSDefs.hpp  SSEvent.cpp  SSEvent.hpp  SSEventSet.cpp  SSEventSet.hpp  SSEventTraits.hpp  SSIdCriteria.cpp  SSIdCriteria.hpp  SSInput.cpp  SSInput.hpp  SSKdTree.cpp  SSKdTree.hpp  SSMPIManager.cpp  SSMPIManager.hpp  SSNCReader.cpp  SSNCReader.hpp  SSSearchManager.cpp  SSSearchManager.hpp  SSSearchParams.hpp  SSSector.cpp  SSSector.hpp  SSSectorSet.cpp  SSSectorSet.hpp  SSTrack.cpp  SSTrack.hpp  SSTrackSet.cpp  SSTrackSet.hpp  SSUtilities.cpp  SSUtilities.hpp  SSWorkspace.cpp  SSWorkspace.hpp  StrideSearchDataLatLon.cpp  (+6 more)
src/old/: StrideSearchDataBase.h  StrideSearchEvent.cpp  StrideSearchEventList.cpp  StrideSearchEventList.h  StrideSearchExtraCriteria.h  StrideSearchNanoflannAdaptor.h  StrideSearchNanoflannTree.cpp  StrideSearchTimer.h
testData/: README.md  conusx4v1.g  plotSres.ncl
tests/: CMakeLists.txt  SSAverageAreaTest.cpp  SSDateTimeTests.cpp  SSDefsUnitTests.cpp  SSEventSetUnitTests.cpp  SSEventUnitTests.cpp  SSIdCriteriaUnitTests.cpp  SSInputUnitTests.cpp  SSKdTreeUnitTests.cpp  SSMPIManagerUnitTests.cpp  SSNCReaderUnitTests.cpp  SSNanoTest.cpp  SSSearchManagerUnitTests.cpp  SSSectorSetUnitTests.cpp  SSSectorUnitTest.cpp  SSSectorUnitTests.cpp  SSTrackTest.cpp  SSTropicalCycloneTest.cpp  SSUtilitiesTests.cpp  SSWorkspaceDictUnitTest.cpp  SSWorkspaceUnitTests.cpp
(+362 files in other folders)
